feat: Add file upload for specific requirements
Integrates Mammoth.js for reading .docx files and supports plain .txt files. Users can now upload documents to populate the "specific requirements" field, streamlining the test generation process.

Removes unnecessary Vite base configuration.

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
     "remark-gfm": "https://aistudiocdn.com/remark-gfm@^4.0.1",
-    "docx": "https://esm.sh/docx@8.5.0"
+    "docx": "https://esm.sh/docx@8.5.0",
+    "mammoth": "https://esm.sh/mammoth@1.6.0"
   }
 }
 </script>
 </head>
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
